# papercraft-pipeline

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: build.yml
src/: config.h  main.cpp  mesh_loader.cpp  mesh_loader.h  metrics.cpp  metrics.h  segmentation.cpp  segmentation.h  sheet_generator.cpp  sheet_generator.h  simplification.cpp  simplification.h  stb_impl.cpp  unfolding.cpp  unfolding.h  utils.h
tests/: test_math.cpp
